--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
         </div>
     </header>
     <main>
-
+        <section class="container">
+            <div class="teams-img-container">
+                <img src="./images/team1.png">
+                <img src="./images/team2.png">
+                <img src="./images/team3.png">
+                <img src="./images/team4.png">
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="quick">Quick list</span> of Our <span class="teams-features">Features</span></h3>
+                <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explor More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
